Completed population of Facility with new Account URI.
