# examples/openapi_iri_facility_api_v1.json
@@ -5458,25 +5458,41 @@
         "properties": {
           "type": {
             "type": "string",
-            "format": "uri"
+            "format": "uri",
+            "default": "about:blank",
+            "description": "A URI reference that identifies the problem type.",
+            "example": "https://example.com/notFound"
           },
           "title": {
-            "type": "string"
+            "type": "string",
+            "description": "A short, human-readable summary of the problem type.",
+            "example": "Not Found"
           },
           "status": {
             "type": "integer",
             "format": "int32",
+            "description": "The HTTP status code generated by the origin server for this occurrence of the problem.",
+            "example": 404,
             "maximum": 599,
             "minimum": 100
           },
           "detail": {
-            "type": "string"
+            "type": "string",
+            "description": "A human-readable explanation specific to this occurrence of the problem.",
+            "example": "Descriptive text."
           },
           "instance": {
             "type": "string",
-            "format": "uri"
+            "format": "uri",
+            "description": "A URI reference that identifies the specific occurrence of the problem.",
+            "example": "http://localhost:8081/api/v1/status/events/f9d6e700-1807-45bd-9a52-e81c32d40c5a"
           }
-        }
+        },
+        "required": [
+          "instance",
+          "status",
+          "type"
+        ]
       },
       "Resource": {
         "type": "object",
@@ -5837,6 +5853,27 @@
             }
           },
           "capability_uris": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uri"
+            }
+          },
+          "project_uris": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uri"
+            }
+          },
+          "project_allocation_uris": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uri"
+            }
+          },
+          "user_allocation_uris": {
             "type": "array",
             "items": {
               "type": "string",
